k8s/seafile/manifests/mariadb.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mariadb
  namespace: seafile
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: seafile-mariadb
  template:
    metadata:
      labels:
        app: seafile-mariadb
    spec:
      nodeSelector:
        kubernetes.io/arch: amd64
      containers:
        - name: mariadb
          image: mariadb:10.11
          ports:
            - containerPort: 3306
          volumeMounts:
            - name: mariadb-data
              mountPath: /var/lib/mysql
          resources:
            requests:
              memory: "256Mi"
              cpu: "250m"
            limits:
              memory: "1Gi"
              cpu: "1000m"
      volumes:
        - name: mariadb-data
          persistentVolumeClaim:
            claimName: mariadb-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: mariadb-svc
  namespace: seafile
spec:
  selector:
    app: seafile-mariadb
  ports:
    - protocol: TCP
      port: 3306
      targetPort: 3306
