k8s/seafile/manifests/redis.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis
  namespace: seafile
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: seafile-redis
  template:
    metadata:
      labels:
        app: seafile-redis
    spec:
      containers:
        - name: redis
          image: redis:7-alpine
          ports:
            - containerPort: 6379
          resources:
            requests:
              memory: "64Mi"
              cpu: "100m"
            limits:
              memory: "128Mi"
              cpu: "250m"
---
apiVersion: v1
kind: Service
metadata:
  name: redis-svc
  namespace: seafile
spec:
  selector:
    app: seafile-redis
  ports:
    - protocol: TCP
      port: 6379
      targetPort: 6379
